--- a/pom.xml
+++ b/pom.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
         <groupId>org.scijava</groupId>
         <artifactId>pom-scijava</artifactId>
         <version>17.1.1</version>
-        <relativePath/>
+        <relativePath />
     </parent>
 
     <groupId>org.ilastik</groupId>
     <artifactId>ilastik4ij</artifactId>
-    <version>1.0.6-SNAPSHOT</version>
+    <version>1.1.0</version>
 
     <name>ilastik imageJ modules</name>
     <description>These ImageJ plugins wrap ilastik workflows</description>
@@ -25,7 +24,7 @@
     <licenses>
         <license>
             <name>BSD</name>
-            <url/>
+            <url />
             <distribution>repo</distribution>
         </license>
     </licenses>
@@ -34,7 +33,7 @@
         <developer>
             <id>chaubold</id>
             <name>Carsten Haubold</name>
-            <url/>
+            <url />
         </developer>
     </developers>
     <contributors>
@@ -53,7 +52,7 @@
     <scm>
         <connection>scm:git:git://github.com/ilastik/ilastik4ij</connection>
         <developerConnection>scm:git:git@github.com:ilastik/ilastik4ij</developerConnection>
-        <tag>HEAD</tag>
+        <tag>ilastik4ij-1.1.0</tag>
         <url>https://github.com/ilastik/ilastik4ij</url>
     </scm>
     <issueManagement>
