--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>org.ilastik</groupId>
     <artifactId>ilastik4ij</artifactId>
-    <version>1.1.1-SNAPSHOT</version>
+    <version>1.2.0</version>
 
     <name>ilastik imageJ modules</name>
     <description>These ImageJ plugins wrap ilastik workflows</description>
@@ -52,7 +52,7 @@
     <scm>
         <connection>scm:git:git://github.com/ilastik/ilastik4ij</connection>
         <developerConnection>scm:git:git@github.com:ilastik/ilastik4ij</developerConnection>
-        <tag>HEAD</tag>
+        <tag>ilastik4ij-1.2.0</tag>
         <url>https://github.com/ilastik/ilastik4ij</url>
     </scm>
     <issueManagement>
